fix: add darkMode styles for modal, collapse

--- a/src/assets/styles/components/_collapse.scss
+++ b/src/assets/styles/components/_collapse.scss
@@ -86,3 +86,9 @@
         }
     }
 }
+
+[data-theme="dark"] {
+    .collapse {
+        border-color: var(--grey-30);
+    }
+}
